--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1> Hello World </h1>
+        <h1 class = "title"> Hello World </h1>
         <p> More to come soon !</p>
     </body>
 </html>
