--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -12,10 +12,24 @@
         <a href="List_Of_Projects.html"> Projects </a>
         <a href="contact.html"> Contact Me </a>
     </header>
+
     <body>
+        
         <h1 class = "title"> Hello World </h1>
-        <a href="Projects/overseer.html"> This is a test link</a>
-        <a href="about.html"> About Me </a>
+        <h3> Academic - Overseer </h3>
+        <a href="Projects/overseer.html"> Learn More </a>
+        <h3> Academic - Capstone Project</h3>
+        <a href="#"> Coming Soon </a>
+        <h3> Emphysys Co-op - Customer Electronic Handpiece </h3>
+        <a href="Projects/EmphysysCoOp.html"> Learn More </a>
+        <h3> Independent - 1967 Pontiac GTO Restoration </h3>
+        <a href="Projects/GTO.html"> Learn More </a>
+        <h3> Independent - Click 2.0 </h3>
+        <a href="#"> Learn More </a>
+        <h3> Independent - Shambler </h3>
+        <a href="#"> Learn More </a>
+
+        
         <p> More to come soon !</p>
     </body>
 </html>
