--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
         <a href="contact.html"> Contact Me </a>
     </header>
     <body>
-        <h1 class = "title"> Hello World </h1>
-        <a href="Projects/overseer.html"> This is a test link</a>
-        <a href="about.html"> About Me </a>
-        <p> More to come soon !</p>
+        <h1 class = "title"> Say Hi </h1>
+        <a href="mailto:shah.daniel@pm.me"> Send me an email</a>
+        <a href="tel:+18577562224"> (857) - 756 - 2224 </a>
+
     </body>
 </html>
