--- a/Projects/EmphysysCoOp.html
+++ b/Projects/EmphysysCoOp.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="style.css">
     </head>
+    <header>
+        <a href="index.html"> Daniel Shah </a>
+        <a href= "about.html"> About Me</a>
+        <a href="List_Of_Projects.html"> Projects </a>
+        <a href="contact.html"> Contact Me </a>
+    </header>
     <body>
         <h1> 
             Emphysys Co-op - Customer Electronic Handpiece
@@ -12,9 +21,9 @@
             Liquid cooling needs to be integrated into the hand piece to cool the electronic components
         </p>
         
-        <figure>
-            <img src="">
-            <figcaption> Placeholder Caption</figcaption>
+        <figure class="main-project-photo">
+            <img src="photos/Emphysys-hnadpieceV1.jpg">
+            <figcaption> Prototype of revised CAD handpiece</figcaption>
         </figure>
 
         <h2> 
