added up to date project list/fixed CSS issues with project files

--- a/Projects/EmphysysCoOp.html
+++ b/Projects/EmphysysCoOp.html
@@ -4,7 +4,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <header>
         <a href="index.html"> Daniel Shah </a>
@@ -21,8 +21,8 @@
             Liquid cooling needs to be integrated into the hand piece to cool the electronic components
         </p>
         
-        <figure class="main-project-photo">
-            <img src="photos/Emphysys-hnadpieceV1.jpg">
+        <figure>
+            <img class="main-project-photo" src="../photos/Emphysys-handpieceV1.jpg">
             <figcaption> Prototype of revised CAD handpiece</figcaption>
         </figure>
 
