--- a/Projects/GTO.html
+++ b/Projects/GTO.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="../style.css">
     </head>
+    <header>
+        <a href="index.html"> Daniel Shah </a>
+        <a href= "about.html"> About Me</a>
+        <a href="List_Of_Projects.html"> Projects </a>
+        <a href="contact.html"> Contact Me </a>
+    </header>
     <body>
         <h1> 
             Independent - 1967 Pontiac GTO Restoration
