--- a/Projects/Project Template.html
+++ b/Projects/Project Template.html
@@ -4,7 +4,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <header>
         <a href="index.html"> Daniel Shah </a>
@@ -28,25 +28,21 @@
             Objectives:
         </h3>
         <ul>
-            <li> To monitor infant vital signs (breathing and heart rate) </li>
-            <li> To alert medical personnel of the specific medical issue (error with breathing, heart rate or both) </li>
+            <li> </li>
+
         </ul>
         <h3>
             Challenges:
         </h3>
         <ul>
-            <li> This was my first engineering focused project and I had limited experience with an Arduino and had to learn quick.</li>
-            <li> To my knowledge, there is no known breathing rate sensor so I had to make my own </li>
+            
+            <li> </li>
         </ul>
         <h3>
             Results:
         </h3>
         <ul>
-            <li> A device that can generate different sound and visual cues to quickly allow medical personnel to diagnose an issue with the infant monitored. </li>
-            <li> A variable resistance wire wrapped around the chest that could measure infant breathing rate without being invasive. </li>
-            <li> A video demonstrating the functions shown below: </li>
+            <li> </li>
         </ul>
     </body>
 </html>
-
-
