--- a/Projects/overseer.html
+++ b/Projects/overseer.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="../style.css">
     </head>
+    <header>
+        <a href="index.html"> Daniel Shah </a>
+        <a href= "about.html"> About Me</a>
+        <a href="List_Of_Projects.html"> Projects </a>
+        <a href="contact.html"> Contact Me </a>
+    </header>
     <body>
-        <h1> 
+        <h1 class = "title"> 
             Academic - Overseer 
         </h1>
         <p>
@@ -37,6 +46,11 @@
             <li> A variable resistance wire wrapped around the chest that could measure infant breathing rate without being invasive. </li>
             <li> A video demonstrating the functions shown below: </li>
         </ul>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qdYQa3vGVb4" title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        <a href = "https://docs.google.com/document/d/18Smb2N9MdlcGVGjaaBALHqX2id-_lF1wTiGCgb0_7Oo/edit?usp=sharing"> Link to Academic Report</a>
     </body>
 </html>
 
