--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -19,17 +19,16 @@
         <h3> Academic - Overseer </h3>
         <a href="Projects/overseer.html"> Learn More </a>
         <h3> Academic - Capstone Project</h3>
-        <a href="#"> Coming Soon </a>
+        <a href="Project/capstone.html"> Coming Soon </a>
         <h3> Emphysys Co-op - Customer Electronic Handpiece </h3>
         <a href="Projects/EmphysysCoOp.html"> Learn More </a>
         <h3> Independent - 1967 Pontiac GTO Restoration </h3>
         <a href="Projects/GTO.html"> Learn More </a>
         <h3> Independent - Click 2.0 </h3>
-        <a href="#"> Learn More </a>
+        <a href="Projects/click-2.0.html"> Learn More </a>
         <h3> Independent - Shambler </h3>
-        <a href="#"> Learn More </a>
+        <a href="Projects/shambler.html"> Learn More </a>
 
-        
         <p> More to come soon !</p>
     </body>
 </html>
