--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             About Me
         </h1>
         <figure>
-            <img src="">
+            <img class="main-project-photo" src="photos/bio.jpg">
             <figcaption> Placeholder Caption</figcaption>
         </figure>
         <p>
