Reworked image naming system

--- a/Projects/EmphysysCoOp.html
+++ b/Projects/EmphysysCoOp.html
@@ -22,7 +22,7 @@
         </p>
         
         <figure>
-            <img class="main-project-photo" src="../photos/Emphysys-handpieceV1.jpg">
+            <img class="main-project-photo" src="../photos/EMPHY-1.jpg">
             <figcaption> Prototype of revised CAD handpiece</figcaption>
         </figure>
 
