--- a/Projects/overseer.html
+++ b/Projects/overseer.html
@@ -52,6 +52,10 @@
         </iframe>
         <a href = "https://docs.google.com/document/d/18Smb2N9MdlcGVGjaaBALHqX2id-_lF1wTiGCgb0_7Oo/edit?usp=sharing"> Link to Academic Report</a>
     </body>
+    <figure>
+        <img class="main-project-photo" src="../photos/OVR-1.png">
+        <img class = "main-project-photo" src="../photos/OVR-2.JPG">
+    </figure>
 </html>
 
 
