--- a/Projects/Project Template.html
+++ b/Projects/Project Template.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     <header>
-        <a href="index.html"> Daniel Shah </a>
-        <a href= "about.html"> About Me</a>
-        <a href="List_Of_Projects.html"> Projects </a>
-        <a href="contact.html"> Contact Me </a>
+        <a href="../index.html"> Daniel Shah </a>
+        <a href= "../about.html"> About Me</a>
+        <a href="../List_Of_Projects.html"> Projects </a>
+        <a href="../contact.html"> Contact Me </a>
     </header>
     <body>
         <h1> 
