--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <body>
         <h1 class = "title"> Hello World </h1>
-        <p> More to come soon !</p>
+        <h3> I'm D. S. a mechanical engineer!</h3>
+        <p> *bio draft* from GVA, interested in product development and automation. More content and style coming soon.</p>
     </body>
 </html>
