--- a/Projects/capstone.html
+++ b/Projects/capstone.html
@@ -14,11 +14,10 @@
     </header>
     <body>
         <h1> 
-            Academic - Overseer 
+            Academic - Capstone Project
         </h1>
         <p>
-            For my intro to engineering class, my team chose to program an arduino to address Sudden Infant Death Syndrome (SIDS).
-            This was done with a total cost below $100
+            Details coming soon !
         </p>
         
         <h2> 
