--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -6,29 +6,52 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="style.css">
     </head>
-    <header>
-        <a href="index.html"> Daniel Shah </a>
-        <a href= "about.html"> About Me</a>
-        <a href="List_Of_Projects.html"> Projects </a>
-        <a href="contact.html"> Contact Me </a>
-    </header>
-
     <body>
-        
-        <h1 class = "title"> Hello World </h1>
-        <h3> Academic - Overseer </h3>
-        <a href="Projects/overseer.html"> Learn More </a>
-        <h3> Academic - Capstone Project</h3>
-        <a href="Project/capstone.html"> Coming Soon </a>
-        <h3> Emphysys Co-op - Customer Electronic Handpiece </h3>
-        <a href="Projects/EmphysysCoOp.html"> Learn More </a>
-        <h3> Independent - 1967 Pontiac GTO Restoration </h3>
-        <a href="Projects/GTO.html"> Learn More </a>
-        <h3> Independent - Click 2.0 </h3>
-        <a href="Projects/click-2.0.html"> Learn More </a>
-        <h3> Independent - Shambler </h3>
-        <a href="Projects/shambler.html"> Learn More </a>
+        <header>
+            <nav>
+                <a class = "link-button" href="index.html"> daniel shah </a>
+                <ul class="nav-links">
+                    <li class="nav-links"><a class = "link-button" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "link-button" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "link-button" href="contact.html"> contact </a>           </li>
+                </ul>
+            </nav>
+        </header>
 
+        <h1 class = "title"> projects </h1>
+        <h2 class="title"> chronological order (from left to right)</h2>
+        <div class="project-grid">
+            <div class="project">
+                <h3> Independent - The website you are on </h3>
+                <a class="link-button" href="Projects/click-2.0.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Academic - Capstone Project</h3>
+                <a class="link-button" href="Project/capstone.html"> Coming Soon </a>
+            </div>
+            <div class="project">
+                <h3> Independent - Click 2.0 </h3>
+                <a class="link-button" href="Projects/click-2.0.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Independent - Shambler </h3>
+                <a class="link-button" href="Projects/shambler.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Emphysys Co-op - Customer Electronic Handpiece </h3>
+                <a class="link-button" href="Projects/EmphysysCoOp.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Independent - 1967 Pontiac GTO Restoration </h3>
+                <a class="link-button" href="Projects/GTO.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Academic - Overseer </h3>
+                <a class="link-button" href="Projects/overseer.html"> Learn More </a>
+            </div>
+        </div>
+
+        
         <p> More to come soon !</p>
     </body>
 </html>
