--- a/about.html
+++ b/about.html
@@ -8,10 +8,14 @@
     </head>
     <body>
         <header>
-            <a href="index.html"> Daniel Shah </a>
-            <a href= "about.html"> About Me</a>
-            <a href="List_Of_Projects.html"> Projects </a>
-            <a href="contact.html"> Contact Me </a>
+            <nav>
+                <a class = "link-button" href="index.html"> daniel shah </a>
+                <ul class="nav-links">
+                    <li class="nav-links"><a class = "link-button" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "link-button" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "link-button" href="contact.html"> contact </a>           </li>
+                </ul>
+            </nav>
         </header>
         <h1 class ="title"> 
             About Me
