--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,17 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="style.css">
     </head>
-    <header>
-        <a href="index.html"> Daniel Shah </a>
-        <a href= "about.html"> About Me</a>
-        <a href="List_Of_Projects.html"> Projects </a>
-        <a href="contact.html"> Contact Me </a>
-    </header>
     <body>
+        <header>
+            <nav>
+                <a class = "link-button" href="index.html"> daniel shah </a>
+                <ul class="nav-links">
+                    <li class="nav-links"><a class = "link-button" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "link-button" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "link-button" href="contact.html"> contact </a>           </li>
+                </ul>
+            </nav>
+        </header>
         <h1 class = "title"> Say Hi </h1>
         <a href="mailto:shah.daniel@pm.me"> Send me an email</a>
         <a href="tel:+18577562224"> (857) - 756 - 2224 </a>
