--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="style.css">
     </head>
-    <header>
-        <a href="index.html"> Daniel Shah </a>
-        <a href= "about.html"> About Me</a>
-        <a href="List_Of_Projects.html"> Projects </a>
-        <a href="contact.html"> Contact Me </a>
-    </header>
     <body>
-        <h1 class = "title"> Hello World </h1>
-        <h3> I'm D. S. a mechanical engineer!</h3>
-        <p> *bio draft* from GVA, interested in product development and automation. More content and style coming soon.</p>
+        <header>
+            <nav>
+                <a class = "link-button" href="index.html"> daniel shah </a>
+                <ul class="nav-links">
+                    <li class="nav-links"><a class = "link-button" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "link-button" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "link-button" href="contact.html"> contact </a>           </li>
+                </ul>
+            </nav>
+        </header>
+        
+        <h1> Hi ! I'm Daniel Shah, mechanical engineer </h1>
+        <h3> I am currently looking for work in the Boston,MA area in automation or product development. </h3>
     </body>
 </html>
