--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -23,11 +23,11 @@
         <div class="project-grid">
             <div class="project">
                 <h3> Independent - The website you are on </h3>
-                <a class="link-button" href="Projects/click-2.0.html"> Learn More </a>
+                <a class="link-button" href="#"> Learn More </a>
             </div>
             <div class="project">
                 <h3> Academic - Capstone Project</h3>
-                <a class="link-button" href="Project/capstone.html"> Coming Soon </a>
+                <a class="link-button" href="#"> Coming Soon </a>
             </div>
             <div class="project">
                 <h3> Independent - Click 2.0 </h3>
@@ -36,6 +36,10 @@
             <div class="project">
                 <h3> Independent - Shambler </h3>
                 <a class="link-button" href="Projects/shambler.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Academic - PC Watercooler Project</h3>
+                <a class="link-button" href="#"> Coming Soon </a>
             </div>
             <div class="project">
                 <h3> Emphysys Co-op - Customer Electronic Handpiece </h3>
