Change color of Navbar
Used colors to eliminate some titles

--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -9,21 +9,24 @@
     <body>
         <header>
             <nav>
-                <a class = "link-button" href="index.html"> daniel shah </a>
+                <a class = "unselected-page" href="index.html"> daniel shah </a>
                 <ul class="nav-links">
-                    <li class="nav-links"><a class = "link-button" href= "about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "link-button" href="List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "link-button" href="contact.html"> contact </a>           </li>
+                    <li class="nav-links"><a class = "unselected-page" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "selected-page" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "unselected-page" href="contact.html"> contact </a>           </li>
                 </ul>
             </nav>
         </header>
 
-        <h1 class = "title"> projects </h1>
         <h2 class="title"> chronological order (from left to right)</h2>
         <div class="project-grid">
             <div class="project">
                 <h3> Independent - The website you are on </h3>
-                <a class="link-button" href="#"> Learn More </a>
+                <a class="link-button" href="#"> Coming Soon </a>
+            </div>
+            <div class="project">
+                <h3> Academic - Capstone Project</h3>
+                <a class="link-button" href="#"> Coming Soon </a>
             </div>
             <div class="project">
                 <h3> Academic - Capstone Project</h3>
