--- a/Projects/Project Template.html
+++ b/Projects/Project Template.html
@@ -9,11 +9,11 @@
     <body>
         <header>
             <nav>
-                <a class = "link-button" href="index.html"> daniel shah </a>
+                <a class = "unselected-page" href="index.html"> daniel shah </a>
                 <ul class="nav-links">
-                    <li class="nav-links"><a class = "link-button" href= "about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "link-button" href="List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "link-button" href="contact.html"> contact </a>           </li>
+                    <li class="nav-links"> <a class = "unselected-page" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"> <a class = "selected-page" href="List_Of_Projects.html"> projects </a>      </li>
+                    <li class="nav-links"> <a class = "unselected-page" href="contact.html"> contact </a>              </li>
                 </ul>
             </nav>
         </header>
