--- a/about.html
+++ b/about.html
@@ -9,41 +9,24 @@
     <body>
         <header>
             <nav>
-                <a class = "link-button" href="index.html"> daniel shah </a>
+                <a class = "unselected-page" href="index.html"> daniel shah </a>
                 <ul class="nav-links">
-                    <li class="nav-links"><a class = "link-button" href= "about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "link-button" href="List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "link-button" href="contact.html"> contact </a>           </li>
+                    <li class="nav-links"><a class = "selected-page" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "unselected-page" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "unselected-page" href="contact.html"> contact </a>           </li>
                 </ul>
             </nav>
         </header>
-        <h1 class ="title"> 
-            About Me
-        </h1>
         <figure>
             <img class="main-project-photo" src="photos/about-1.jpg">
             <figcaption> Placeholder Caption</figcaption>
         </figure>
         <p>
-            A soaking wet me once saw a man, pulling out an umbrella hidden in his car door. 
-            At the wise, old age of 6 and a half, I thought that was the coolest thing ever and aspired to find more things like it.  
-            Objects such as the straw holder/fishing hook built into the soda can tab to a rocket that lands itself, are the things I nerd about. 
-            Elegant solutions, everyday convenience, and a tasteful design are all things I hope to offer in all aspects of my existence. 
+            I am finishing my bachelors in mechanical engineering at Northeastern University in May 2022. I currently live in Watertown, MA and am looking for work in the Boston, MA area. 
+            I bring a neutral role to arguments, hands on skills in fabrication, and systematised approach to CAD'ing. I setup as many plans as possible upfront to make future work or pivots less demanding.
         </p>
         <p>
-            I am currently wrapping up my mechanical engineering degree at Northeastern University. 
-            My next step is looking for work within the automation or consumer product development fields. 
-            I hope to offer my drive to learn and experience to contribute towards creating improved products in the consumer market, 
-            and to further develop my skill sets along the way. 
-        </p>
-        <p>
-            In my free time, where I feel productive, I am pursuing the CSWP certification, 
-            learning full-stack web development skills, acting as a wealth manager for a few private clients. 
-        </p>
-        <p>
-            In my unproductive free time, I am acting as a neutral party between my friends arguing about current events and philosophies, 
-            cooking meals that are slightly healthier than the McDonalds menu, 
-            and pursing my goal to one day look like Dwayne “The Rock” Johnson. 
+            Outside of my major, I enjoy: cooking for my roommate and I, serving as a remote wealth advisor, lifting heavy objects for a hobby.
         </P>
     </body>
 </html>
