--- a/contact.html
+++ b/contact.html
@@ -9,23 +9,19 @@
     <body>
         <header>
             <nav>
-                <a class = "link-button" href="index.html"> daniel shah </a>
+                <a class = "unselected-page" href="index.html"> daniel shah </a>
                 <ul class="nav-links">
-                    <li class="nav-links"><a class = "link-button" href= "about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "link-button" href="List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "link-button" href="contact.html"> contact </a>           </li>
+                    <li class="nav-links"><a class = "unselected-page" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "unselected-page" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "selected-page" href="contact.html"> contact </a>           </li>
                 </ul>
             </nav>
         </header>
         <h1 class = "title"> Say Hi </h1>
         <div class="contact">
-            <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.838762525542!2d-71.20294648369165!3d42.3672753791867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e382af7c40b08b%3A0xbd308ca812fc9e!2s350%20Pleasant%20St%2C%20Watertown%2C%20MA%2002472!5e0!3m2!1sen!2sus!4v1645930941432!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-            <div class="contact-info">
-                <a class="link-button" href="mailto:shah.daniel@pm.me"> Send me an email</a>
-                <a class="link-button" href="tel:+18577562224"> (857) - 756 - 2224 </a>
-            </div>
+            <h2> Email: shah.daniel@pm.me <a class="link-button" href="mailto:shah.daniel@pm.me"> Send me an email</a> </h2> 
+            <h2> +1 (857) 756 2224 <a class="link-button" href="tel:+18577562224"> Call me </a> </h2>
+            
         </div>
     </body>
 </html>
