--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <body>
         <header>
             <nav>
-                <a class = "link-button" href="index.html"> daniel shah </a>
+                <a class = "selected-page" href="index.html"> daniel shah </a>
                 <ul class="nav-links">
-                    <li class="nav-links"><a class = "link-button" href= "about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "link-button" href="List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "link-button" href="contact.html"> contact </a>           </li>
+                    <li class="nav-links"><a class = "unselected-page" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "unselected-page" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "unselected-page" href="contact.html"> contact </a>           </li>
                 </ul>
             </nav>
         </header>
-        
-        <h1> Hi ! I'm Daniel Shah, mechanical engineer </h1>
-        <h3> I am currently looking for work in the Boston,MA area in automation or product development. </h3>
+        <div id="intro">
+            <h1 class="title"> Hi I'm Daniel Shah </h1>
+            <h3> a mechanical engineer</h3>
+        </div>
     </body>
 </html>
