Created CSS Grid for project template

--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -9,16 +9,16 @@
     <body>
         <header>
             <nav>
-                <a class = "unselected-page" href="index.html"> daniel shah </a>
+                <a class = "page" href="index.html"> daniel shah </a>
                 <ul class="nav-links">
-                    <li class="nav-links"><a class = "unselected-page" href= "about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "selected-page" href="List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "unselected-page" href="contact.html"> contact </a>           </li>
+                    <li class="nav-links"><a class = "page" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "page selected" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "page" href="contact.html"> contact </a>           </li>
                 </ul>
             </nav>
         </header>
 
-        <h2 class="title"> chronological order (from left to right)</h2>
+        <h2 class="headliner"> chronological order (from left to right)</h2>
         <div class="project-grid">
             <div class="project">
                 <h3> Independent - The website you are on </h3>
