--- a/about.html
+++ b/about.html
@@ -9,17 +9,17 @@
     <body>
         <header>
             <nav>
-                <a class = "unselected-page" href="index.html"> daniel shah </a>
+                <a class = "page" href="index.html"> daniel shah </a>
                 <ul class="nav-links">
-                    <li class="nav-links"><a class = "selected-page" href= "about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "unselected-page" href="List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "unselected-page" href="contact.html"> contact </a>           </li>
+                    <li class="nav-links"><a class = "page selected" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "page" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "page" href="contact.html"> contact </a>           </li>
                 </ul>
             </nav>
         </header>
         <figure>
-            <img class="main-project-photo" src="photos/about-1.jpg">
-            <figcaption> Placeholder Caption</figcaption>
+            <img class="cover" src="photos/about-1.jpg">
+            <figcaption></figcaption>
         </figure>
         <p>
             I am finishing my bachelors in mechanical engineering at Northeastern University in May 2022. I currently live in Watertown, MA and am looking for work in the Boston, MA area. 
