--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <body>
         <header>
             <nav>
-                <a class = "selected-page" href="index.html"> daniel shah </a>
+                <a class = "page selected" href="index.html"> daniel shah </a>
                 <ul class="nav-links">
-                    <li class="nav-links"><a class = "unselected-page" href= "about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "unselected-page" href="List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "unselected-page" href="contact.html"> contact </a>           </li>
+                    <li class="nav-links"><a class = "page" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "page" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "page" href="contact.html"> contact </a>           </li>
                 </ul>
             </nav>
         </header>
         <div id="intro">
-            <h1 class="title"> Hi I'm Daniel Shah </h1>
+            <h1> Hi I'm Daniel Shah </h1>
             <h3> a mechanical engineer</h3>
         </div>
     </body>
