--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> Projects </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
@@ -29,8 +30,8 @@
                 <a class="link-button" href="#"> Coming Soon </a>
             </div>
             <div class="project">
-                <h3> Academic - Capstone Project</h3>
-                <a class="link-button" href="#"> Coming Soon </a>
+                <h3> Academic - ANSYS Engine Block</h3>
+                <a class="link-button" href="Projects/engine-block.html"> Learn More </a>
             </div>
             <div class="project">
                 <h3> Independent - Click 2.0 </h3>
