--- a/Projects/EmphysysCoOp.html
+++ b/Projects/EmphysysCoOp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> Customer Electronic Handpiece </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
@@ -24,7 +25,7 @@
                 </h1>
                 <p>
                     The customer is developing a hand piece that uses electricity. 
-                    Liquid cooling needs to be integrated into the hand piece to cool the electronic components
+                    Liquid cooling needs to be integrated into the hand piece to cool the electronic components.
                 </p>
             </div>
             <figure class="cover">
