--- a/Projects/Project Template.html
+++ b/Projects/Project Template.html
@@ -9,44 +9,59 @@
     <body>
         <header>
             <nav>
-                <a class = "unselected-page" href="../index.html"> daniel shah </a>
+                <a class = "page" href="../index.html"> daniel shah </a>
                 <ul class="nav-links">
-                    <li class="nav-links"><a class = "unselected-page" href= "../about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "selected-page" href="../List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "unselected-page" href="../contact.html"> contact </a>           </li>
+                    <li class="nav-links"><a class = "page" href= "../about.html"> about me </a>                    </li>
+                    <li class="nav-links"><a class = "page selected" href="../List_Of_Projects.html"> projects </a> </li>
+                    <li class="nav-links"><a class = "page" href="../contact.html"> contact </a>                    </li>
                 </ul>
             </nav>
         </header>
-        <h1> 
-            Academic - Overseer 
-        </h1>
-        <p>
-            For my intro to engineering class, my team chose to program an arduino to address Sudden Infant Death Syndrome (SIDS).
-            This was done with a total cost below $100
-        </p>
-        
-        <h2> 
-            Summary 
-        </h2>
-        <h3>
-            Objectives:
-        </h3>
-        <ul>
-            <li> </li>
+        <div class="summary-grid">
+            <div class="headliner">
+                <h1> 
+                    Emphysys Co-op - Customer Electronic Handpiece
+                </h1>
+                <p>
+                    The customer is developing a hand piece that uses electricity. 
+                    Liquid cooling needs to be integrated into the hand piece to cool the electronic components
+                </p>
+            </div>
+            <figure class="cover">
+                <img class="cover" src="../photos/EMPHY-1.jpg">
+                <figcaption> Prototype of revised CAD handpiece</figcaption>
+            </figure>
+            <div class="objectives">
+                <h3>
+                    Objectives:
+                </h3>
+                <p> The hand piece needs: </p>
+                <ul>
+                    <li>To retain liquid inside to protect users from hazards occurring from water and electricity</li>
+                    <li>The CAD model refined and created with anticipation of injection molding being the final method of manufacture</li>
+                </ul>
+            </div>
 
-        </ul>
-        <h3>
-            Challenges:
-        </h3>
-        <ul>
-            
-            <li> </li>
-        </ul>
-        <h3>
-            Results:
-        </h3>
-        <ul>
-            <li> </li>
-        </ul>
+            <div class="challenges">
+                <h3>
+                    Challenges:
+                </h3>
+                <ul>
+                    <li> I had a limited knowledge of o-rings and injection molding and had to self teach via company resources </li>
+                    <li> The inherited CAD model had many interlinked features that I spent time un-linking to allow for modification by future co-ops</li>
+                </ul>
+            </div>
+            <div class="results">
+                <h3>
+                    Results:
+                </h3>
+                <ul>
+                    <li> 2 interlocking pieces were made to be sealed with custom gaskets, threaded inserts, and tapered holes. 
+                        A custom threaded nut was created to allow for water cooling loops to feed from behind</li>
+                    <li> A peer-checked simulation proving chosen insulation will result in no condensation on the interior of the handpiece </li>
+                    <li> An organized CAD model that is mostly injection molding friendly </li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
